--- a/roles/nvue/templates/features/vlans.j2
+++ b/roles/nvue/templates/features/vlans.j2
@@ -2,11 +2,5 @@
       domain:
         br_default:
           type: vlan-aware
-          vlan:
-{% for vlan in vlans %} 
-{%- if not "hwaddress" in vlan %}
-            '{{ vlan.id }}':
-              vni:
-                '{{ vlan.id }}': {}
-{% endif %}
-{% endfor %}
+          vlan: {{vlan-id}}
+
