--- a/roles/nvue/templates/nvue.j2
+++ b/roles/nvue/templates/nvue.j2
@@ -6,5 +6,6 @@
       domain:
         br_default:
           type: vlan-aware
-          vlan: {{vlans}}
+          vlan:
+            value: {{vlans}}
 
