--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -2,4 +2,4 @@ auto bridge
 iface bridge
         bridge-ports hpcbond vxlan10 l3_vni
         bridge-vids 
-        bridge-vlan-aware yes {{group_vars.vlans}}
+        bridge-vlan-aware yes {{vlans}}
