--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -1,7 +1,7 @@
-{% set intvars = interfaces[ansible_hostname] %}
+{% set device_vars = interfaces[ansible_hostname] %}
 auto bridge
 iface bridge
         bridge-ports hpcbond vxlan10 l3_vni
         bridge-vids 
         bridge-vlan-aware yes {{vlans}}
-        test {{ intvars.vlans }}
+        test {{ device_vars.vlans }}
