--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -1,9 +1,7 @@
-#{% set device_vars = interfaces[ansible_hostname] %}
-{% set test_vars = vlan[ansible_hostname] %}
+{% set device_vars = interfaces[ansible_hostname] %}
 auto bridge
 iface bridge
         bridge-ports hpcbond vxlan10 l3_vni
         bridge-vids 
         bridge-vlan-aware yes {{vlans}}
-#        test {{ device_vars.vlans }}
-        test2 {{test_vars.test1}}
+        test {{ device_vars.vlans }}
