--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -5,3 +5,4 @@ iface bridge
         bridge-vids 
         bridge-vlan-aware yes {{vlans}}
         test {{ device_vars.vlans }}
+        test2 {{device_vars.test1 }}
