--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -1,8 +1,9 @@
 {% set device_vars = interfaces[ansible_hostname] %}
+{% set test_vars = vlan2[anible_hostname] %}
 auto bridge
 iface bridge
         bridge-ports hpcbond vxlan10 l3_vni
         bridge-vids 
         bridge-vlan-aware yes {{vlans}}
         test {{ device_vars.vlans }}
-        test2 {{device_vars.test1 }}
+        test2 {{test_vars.test1 }}
