--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -2,7 +2,7 @@
 {% set test_vars = vlan2[ansible_hostname] %}
 auto bridge
 iface bridge
-        bridge-ports hpcbond vxlan10 l3_vni
+        bridge-ports {{device_vars.if}}
         bridge-vids 
         bridge-vlan-aware yes {{vlans}}
         test {{ device_vars.vlans }}
