--- a/roles/vlans/templates/vlans.j2
+++ b/roles/vlans/templates/vlans.j2
@@ -1,5 +1,6 @@
 {% set device_vars = interfaces[ansible_hostname] %}
 {% set test_vars = vlan2[ansible_hostname] %}
+{% set tv = {{vlans}}+{{device_vars.vlans}}
 auto bridge
 iface bridge
         bridge-ports {{device_vars.if}}
@@ -7,3 +8,4 @@ iface bridge
         bridge-vlan-aware yes {{vlans}}
         test {{ device_vars.vlans }}
         test2 {{test_vars.test1 }}
+        test3 {{tv}}
